<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_forgot"
        >

        <TextView
            android:text="@string/tv_title_forgot"
            android:padding="10dp"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@color/black_violet_weak"
            android:textSize="25dp"
            android:textColor="@color/white_gray"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/tv_code_ex"
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_time"
                    android:text="60 seconds."
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/tv_times_enter_code"
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_times"
                    android:text="3"
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"/>

            </LinearLayout>




            <RelativeLayout
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/et"
                    android:gravity="center"
                    android:hint="@string/hint_code"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:paddingHorizontal="40dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_enter_code" />

            </RelativeLayout>

                <TextView
                    android:textStyle="italic"
                    android:text="@string/tv_note"
                    android:textSize="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:textSize="20dp"
                    android:id="@+id/btn_resend"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/white_gray"
                    android:textAllCaps="false"
                    android:text="@string/btn_resend"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"/>

                <Button

                    android:textSize="20dp"
                    android:id="@+id/btn_ok_forgot_2"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/white_gray"
                    android:textAllCaps="false"
                    android:text="@string/btn_ok"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>