<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_forgot"
        >

        <TextView
            android:text="@string/tv_title_forgot"
            android:padding="10dp"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@color/black_violet_weak"
            android:textSize="25dp"
            android:textColor="@color/white_gray"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_username_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/et"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_username"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:paddingLeft="40dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_person" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/et_phone_number_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/et"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_phone_number"
                    android:inputType="number"
                    android:maxLength="14"
                    android:maxLines="1"
                    android:paddingHorizontal="40dp"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_phone" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:textSize="20dp"
                    android:id="@+id/btn_cancel_forgot"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/white_gray"
                    android:textAllCaps="false"
                    android:text="@string/btn_cancel"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"/>

                <Button

                    android:textSize="20dp"
                    android:id="@+id/btn_ok_forgot"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/white_gray"
                    android:textAllCaps="false"
                    android:text="@string/btn_ok"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>