<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:background="@color/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/black_violet_weak">

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_clear_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tv_title_order"
                android:textColor="@color/white_gray"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@id/btn_confirm"
            android:layout_below="@id/rl1"
            android:paddingHorizontal="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_sign_up_ask" />


                <RelativeLayout
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name_rec"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_name_recipient"
                        android:inputType="text"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:paddingLeft="40dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/black" />


                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_person_outline" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_phone_rec"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_phone_recipient"
                        android:inputType="phone"
                        android:maxLength="14"
                        android:maxLines="1"
                        android:paddingHorizontal="40dp"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_phone" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_address_rec"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_address_recipient"
                        android:inputType="text"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:paddingHorizontal="40dp"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_house" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_province_rec"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et"
                        android:gravity="center"
                        android:hint="@string/hint_province_recipient"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingHorizontal="40dp"
                        android:textColor="@color/black"
                        android:textSize="18dp" />

                    <ImageView
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_more2" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_district_rec"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et"
                        android:gravity="center"
                        android:hint="@string/hint_district_recipient"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingHorizontal="40dp"
                        android:textColor="@color/black"
                        android:textSize="18dp" />

                    <ImageView
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_more2" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_town_rec"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et"
                        android:gravity="center"
                        android:hint="@string/hint_town_recipient"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingHorizontal="40dp"
                        android:textColor="@color/black"
                        android:textSize="18dp" />

                    <ImageView
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_more2" />


                </RelativeLayout>

            </LinearLayout>


        </ScrollView>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button"
            android:text="@string/btn_confirm"
            android:textAllCaps="false"
            android:textColor="@color/white_gray"
            android:textSize="18dp"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>